// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvroPayload deserialize should properly deserialize a serialized payload 1`] = `
AvroPayload {
  "createdAt": "2020-02-02T03:04:05.000Z",
  "data": "I ate all of the cheese",
  "duration": 1000,
  "origin": "2020-02-02T03:04:01.000Z",
  "position": 60000,
  "type": "CONFESSION",
}
`;

exports[`AvroPayload deserialize should properly deserialize payload strings with null values 1`] = `
Object {
  "createdAt": Any<String>,
  "data": "hello",
  "duration": 0,
  "origin": "",
  "position": 0,
  "type": null,
}
`;

exports[`AvroPayload serialize should properly should serialize data with a fully populated object 1`] = `
Object {
  "data": Array [
    4,
    46,
    73,
    32,
    97,
    116,
    101,
    32,
    97,
    108,
    108,
    32,
    111,
    102,
    32,
    116,
    104,
    101,
    32,
    99,
    104,
    101,
    101,
    115,
    101,
    2,
    20,
    67,
    79,
    78,
    70,
    69,
    83,
    83,
    73,
    79,
    78,
    2,
    48,
    50,
    48,
    50,
    48,
    45,
    48,
    50,
    45,
    48,
    50,
    84,
    48,
    51,
    58,
    48,
    52,
    58,
    48,
    53,
    46,
    48,
    48,
    48,
    90,
    2,
    48,
    50,
    48,
    50,
    48,
    45,
    48,
    50,
    45,
    48,
    50,
    84,
    48,
    51,
    58,
    48,
    52,
    58,
    48,
    49,
    46,
    48,
    48,
    48,
    90,
    208,
    15,
    192,
    169,
    7,
  ],
  "type": "Buffer",
}
`;

exports[`AvroPayload serialize should properly should serialize data with a partially populated object 1`] = `
Object {
  "data": Array [
    4,
    46,
    73,
    32,
    97,
    116,
    101,
    32,
    97,
    108,
    108,
    32,
    111,
    102,
    32,
    116,
    104,
    101,
    32,
    99,
    104,
    101,
    101,
    115,
    101,
    0,
    2,
    48,
    50,
    48,
    50,
    48,
    45,
    48,
    55,
    45,
    48,
    56,
    84,
    49,
    55,
    58,
    50,
    56,
    58,
    50,
    57,
    46,
    48,
    51,
    50,
    90,
    2,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`AvroPayload serialize should properly should serialize data with an empty object 1`] = `
Object {
  "data": Array [
    0,
    0,
    2,
    48,
    50,
    48,
    50,
    48,
    45,
    48,
    54,
    45,
    49,
    52,
    84,
    49,
    55,
    58,
    51,
    55,
    58,
    49,
    52,
    46,
    48,
    48,
    48,
    90,
    2,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;
